2023-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-buffer-string): Stabilize.

	* tramp-sh.el (tramp-do-copy-or-rename-file): Set date and modes
	if appropriate.
	(tramp-do-copy-or-rename-file-via-buffer)
	(tramp-do-copy-or-rename-file-directly)
	(tramp-do-copy-or-rename-file-out-of-band): Do not set date and modes.

2023-07-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-tramp-timeout): Ensure, that the timeout is a
	positive number, or nil.
	(tramp-handle-access-file): Simplify code.

2023-07-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-access-file): Improve error handling.

2023-07-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-tramp-timeout, with-tramp-suspended-timers):
	New defmacros.
	(tramp-dont-suspend-timers): New defvar.
	(tramp-handle-access-file): Implement handling of
	`remote-file-name-access-timeout'.  (Bug#64401)
	(tramp-action-show-and-confirm-message, tramp-process-actions)
	(with-tramp-locked-connection, tramp-wait-for-regexp)
	(tramp-read-passwd, tramp-read-passwd-without-cache): Use the macros.

2023-07-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-do-copy-or-rename-file):
	* tramp-rclone.el (tramp-rclone-do-copy-or-rename-file):
	Improve stability for WebDAV.

2023-06-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-expand-args): Use `tramp-compat-take'.

	* tramp-container.el (tramp-kubernetes--context-namespace):
	Adapt dpcstring.
	(tramp-kubernetes-connection-local-default-profile)
	(tramp-kubernetes-connection-local-default-variables)
	(tramp-flatpak-connection-local-default-profile)
	(tramp-flatpak-connection-local-default-variables): Rename.

2023-06-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-fuse.el (tramp-fuse-mounted-p): The mount-spec could
	contain an optional trailing slash.  (Bug#64278)

	* tramp-rclone.el (tramp-rclone-handle-file-system-info):
	Check return code of command.
