@@ -1,3 +1,8 @@
+2023-07-11  Jim Porter  <jporterbugs@gmail.com>
+
+	* tramp.el (tramp-handle-file-remote-p): Handle CONNECTED value of
+	'never'.
+
 2023-07-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-get-buffer-string): Stabilize.
